Use 'ggrcGet' instead of '$.get'

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -116,6 +116,9 @@
     }, {
         "object": "$",
         "property": "ajax"
+    }, {
+      "object": "$",
+      "property": "get"
     }]
   }
 }
