Use 'ggrcPost' instead of '$.post'

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -119,6 +119,9 @@
     }, {
       "object": "$",
       "property": "get"
+    }, {
+      "object": "$",
+      "property": "post"
     }]
   }
 }
